# webdocs-mcp

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/: Dockerfile
src/webdocs/: __init__.py  api.py  chunker.py  config.py  crawler.py  database.py  embedder.py  html_utils.py  jobs.py  mcp_server.py  search.py  sitemap.py
tests/: conftest.py  test_api.py  test_crawler.py  test_mcp.py  test_pipeline.py
