[project]
name = "webdocs-mcp"
version = "1.0.0"
description = "Crawl, index, and hybrid-search websites; exposed to LLM agents as an MCP server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "duckdb>=1.0",
    "numpy>=1.26",
    "pydantic>=2.6",
]

[project.optional-dependencies]
openai = ["openai>=1.30"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 145
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
